create github pages

--- a/CV01.html
+++ b/CV01.html
@@ -12,7 +12,7 @@
   <title>CV01</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/icon54/style.css">
+  <link rel="stylesheet" href="assets/icon54-v4/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -72,7 +72,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v1-tools mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v4-tools-2 mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Tools</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-print mbr-iconfont mbr-iconfont-btn"></span>
@@ -95,7 +95,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
 
     
 
@@ -119,7 +119,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="SQiKoPpaW08i57p+3JqXJk/7KtuJP3vxmBEtC7MzdyPI5JCfLhiW2JguZJ9cAX3RCeRYw3msr5RcwyAMeaNu+EnfQDROxYRU0TTF5Hft2rOk5pD3886X6Rks6cF1eMKH.4WqZDVaM+hjPd5+VShCZMguu4yYidrd58CrH8/2VTy5avq+yylO44Q6Mzc66oOoqa76V/Qsh6aprmBAw+bVNZCXDrX06om52HP4BFsEpEA70CaKdzCskM4dtD0zs9btj">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="x05jq5sD7o15PQORS1JueXGsCGeNjGfninGgRaY4Hpr/WCZKoSd2ibVltUAhAhGPfQiwGxcSw2ZGvOCzWQl0Aeg9ySS+ZFJMmsarMDYgA9B6KdM0d25rY5RfiepT/1Vp.vhd3D/9/eu+af5/ZsLP8lVFXeThR+ecP48FisSV8iiGrhpEPFp8RzMrvxFd6h5J49tRxeBcS5vLqunm/pLEFB+aclx6Za9Nip5JQhTOXHbKNHi2LnjiD9PlepjJBUV3Z">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
