--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Egypt LMIS Labor Market Inforamtion System">
   
   <title>SchoolToLaborForm</title>
-  <link rel="stylesheet" href="assets/icon54/style.css">
+  <link rel="stylesheet" href="assets/icon54-v4/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -71,7 +71,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v1-tools mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v4-tools-2 mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Tools</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-print mbr-iconfont mbr-iconfont-btn"></span>
@@ -94,7 +94,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -118,7 +118,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="tGNlSJ1Pl2J6byUpDvRW0smUrzYJ9UuiKjgm8ckD8k5WBkl6x5qVoSlIRJx3gVuCHw7FWZUAOV1t47x61ALbF6SeKFk9N7oB0ypU2hXryaMDji3IWGlWZG4sJGY/L2T6.MsKOamMwwLlfI6yX0+4YNipVUCPYQRMFvgfsgn9hqyPg/c8Lh6Vdxu110dG3q6QdaTr7fT73ZtLLJ2P3Wxxoj03kyhQ4yKgi2GxPhQZkwYXvSYxUCVcvT6zigz8t3HlI">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="INz2svFkhrWU5ZLML704/+UXdtpfHQfmwJu6UBweTGGuhsIorWr1GwmXX5/i5SAWULl2LNyIdZVmsQXaLli+qkgfmm1o8uRqBK3di2wcOZQwT/N+wXzY7hlJ8PiUghB4.EwSr4/nmmDyv9HeuHOIJQvgg1xKYAM8VXwBhPmUXTEsqZ36XcjePKjV5bVMJN8oJYlgT+RS4pk5S5TZ3xZnp7Z3ri2zcRei6EFenT72Fgt5x4EgHqqpR5pDA4kA6otJf">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
