--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -12,7 +12,7 @@
   <title>TrainingProviders</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/icon54/style.css">
+  <link rel="stylesheet" href="assets/icon54-v4/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -73,7 +73,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v1-tools mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v4-tools-2 mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Tools</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-print mbr-iconfont mbr-iconfont-btn"></span>
@@ -96,7 +96,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -120,7 +120,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="IEoO37SV+vIGImHU+FMlklvAjmZv5JAOoOQnroQhgWT9lalN9uYsYkDDwIWTlJtwE/2JywVLfh5oM0Zda2jNeiM0Xml+pHaTzjJ3dk6xsfBc9SxQ/QXeF9fxUmP7xtMo.40Pn8dR+ttvMUTUiiKTx6YKAHi0KBntgjeNOCIFhkbhX/rr9Pb6Gkp0EYmYpq+nl8AyADivZPgQgQ89ouPMknRMPUMY0yGOMzMH/8DUfvZu+1n48PfqwqFkHB+anAoHG">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="IjcnVIyF0qpv3oMFQPm8j5Dx4JbvNUI4Nb2zFoZpyhdvBYPhII/9Vcg7JHc6XTMtMp3kYJbf5Y5Gk0eIXzK5/BQ181ouLM2WjKp6KhQcNmBwdTw4N7jPPVDsQPo9kVve.hFqivuqBHl+mc6valk2Dy5DGNUzPYsBm/mIT4Lm5sqK9Fl+kIs/EQ2xdM4Ojm24xLh1h9Y0a227eTowEL3MNapTqwobomR4/Pn4qbZX2i720rsRj/MrOSoBGCSF9eTRM">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
