--- a/Education.html
+++ b/Education.html
@@ -12,7 +12,7 @@
   <title>Education</title>
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/icon54/style.css">
+  <link rel="stylesheet" href="assets/icon54-v4/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -69,7 +69,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v1-tools mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v4-tools-2 mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Tools</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-print mbr-iconfont mbr-iconfont-btn"></span>
@@ -92,7 +92,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
 
     
 
