--- a/Indicators.html
+++ b/Indicators.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Egypt LMIS Labor Market Inforamtion System">
   
   <title>Indicators</title>
-  <link rel="stylesheet" href="assets/icon54/style.css">
+  <link rel="stylesheet" href="assets/icon54-v4/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -69,7 +69,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v1-tools mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v4-tools-2 mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Tools</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-print mbr-iconfont mbr-iconfont-btn"></span>
@@ -92,7 +92,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -215,7 +215,7 @@
                 <h2 class="mbr-section-title pb-3 align-left mbr-fonts-style display-2">Labour Market Indicators</h2>
                 <h3 class="mbr-section-subtitle pb-5 align-left mbr-fonts-style display-5">Labour Market Indicators</h3>
                 <div class="mbr-figure">
-                    <img src="assets/images/background624.jpg">
+                    <img src="assets/images/background634.jpg">
                 </div>
             </div>
             <div class="cards-block">
