--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Egypt LMIS Labor Market Inforamtion System">
   
   <title>TrainingSearch</title>
-  <link rel="stylesheet" href="assets/icon54/style.css">
+  <link rel="stylesheet" href="assets/icon54-v4/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -72,7 +72,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v1-tools mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v4-tools-2 mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Tools</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-print mbr-iconfont mbr-iconfont-btn"></span>
@@ -95,7 +95,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -119,7 +119,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5bRMoXFkryWU/AblFNmVMr+KHHSotEaeD/ZhVPI+ttE7valD9EjN7QvITgZMszzIoBwYGF/c/M6k3Mfh6L+J5ak6SPS2R5hsUbsk1g+LZem6Io5FrLC50Lg9GBeWdBeI.tUs4Hf1+bAgdK2RnBxom6FaNVKZHpynPUmazRs0fgcX1ns4rUfaudxfQrFGUlBhgufGkS6N8bfI1eRQ7glcffmWkIqlAtDlWankNlQfzkEvdTvysJ8WI4oT5qVSfzlDL">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="eB+0po8zPPXzzkfejWFveABebZNwkRyVRfsN0VtYIcpqLiWiA+ImmwGT9IXCaTHehyTVnnCfaGw87tlP0NpC1hJKUVtFiQkVahOvHDVRJNuwOrWHWSFLZRvoG5fw1Vh6.tOlX0jSjfpMaxz6S3xunZfqoQnSNLEH8EuohnuWuGzemrYVryZUUDP/ZYcLJM1LeFd3Xd4ULCuf8au0XyxBmcO/kCl3Ib6Q/a/925l2xxKjPyabmiyiBN+/3vsrGvSt2">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
