--- a/tools.html
+++ b/tools.html
@@ -10,7 +10,7 @@
   <meta name="description" content="LMIS Egypt Labour market tools Indicators and reports">
   
   <title>Tools</title>
-  <link rel="stylesheet" href="assets/icon54/style.css">
+  <link rel="stylesheet" href="assets/icon54-v4/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -68,7 +68,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v1-tools mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="tools.html#header16-1l" aria-expanded="false"><span class="icon54-v4-tools-2 mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Tools</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-print mbr-iconfont mbr-iconfont-btn"></span>
@@ -91,7 +91,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
 
     
 
@@ -147,7 +147,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background126.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background136.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>LMIS Map</strong></h4>
@@ -162,7 +162,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background227.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background237.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
@@ -177,7 +177,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background328.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background338.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Surveies</strong></h4>
@@ -192,7 +192,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background429.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background439.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
